--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -129,11 +129,20 @@
         width: 150px ;
         height: 150px;
     }
-    // 3rt child of the div
+    // 3rd child of the div
     div:nth-child(3) {
-        width: 70px;
-        height: 70px;
-    } 
+        width: 100px;
+        height: 100px;
+    }
+    // // 4th child of the div
+    // div:nth-child(4) {
+    //     width: 90px;
+    //     height: 90px;
+    // } 
+    // div:nth-child(5) {
+    //     width: 110px;
+    //     height: 110px;
+    // } 
     // very large devices
     @media screen and (min-width: 2000px) {
         // 1st child of the div
@@ -143,14 +152,23 @@
         }
         // 2nd child of the div
         div:nth-child(3) {
-            width: 170px ;
-            height: 170px;
+            width: 220px ;
+            height: 220px;
         }
         // 3rt child of the div
         div:nth-child(1) {
             width: 200px;
             height: 200px;
         }
+        // // 4th child of the div
+        // div:nth-child(4) {
+        //     width: 170px;
+        //     height: 170px;
+        // } 
+        // div:nth-child(5) {
+        //     width: 250px;
+        //     height: 250px;
+        // } 
     }
 
     @media screen and (max-width: 1200px) {
