--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -22,13 +22,19 @@
 
     // logo image
     img {
-        width: 180px;
-        height: 40px;
+        width: 248px;
+        height: 55px;
+
+        // for devices 800px or larger
+        @media screen and (min-width: 800px) {
+            width: 315px;
+            height: 70px;
+        }
 
         // for devices 2000px or larger
         @media screen and (min-width: 2000px) {
-            width: 225px;
-            height: 50px;
+            width: 360px;
+            height: 80px;
         }
     }
 }
@@ -80,7 +86,7 @@
 
 
     // for devices wider than 900px
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 1200px) {
         display: none;
 
     }
@@ -99,6 +105,7 @@
     align-items: center;
     background-color: var(--secondary-color);
 
+    // line icon in menu button
     svg {
         width: 70%;
         height: 70%;
@@ -171,13 +178,13 @@
         }
 
         // mobile menu dissapears if screen is over 900px
-        @media screen and (min-width: 900px) {
+        @media screen and (min-width: 1200px) {
             display: none;
         }
     }
 
     // mobile menu icon dissapears if screen is over 900px
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 1200px) {
         display: none;
     }
 
