--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -120,29 +120,34 @@
     // different sized circles
     // 1st child of the div
     div:nth-child(1) {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 120px;
     }
     // 2nd child of the div
     div:nth-child(2) {
-        margin: 1.75rem;
-        width: 150px ;
-        height: 150px;
+        margin: 1.5rem;
+        margin-bottom: .2rem;
+        width: 120px;
+        height: 120px;
     }
     // 3rd child of the div
     div:nth-child(3) {
-        width: 100px;
-        height: 100px;
+        margin: 1.5rem;
+        width: 170px;
+        height: 170px;
     }
-    // // 4th child of the div
-    // div:nth-child(4) {
-    //     width: 90px;
-    //     height: 90px;
-    // } 
-    // div:nth-child(5) {
-    //     width: 110px;
-    //     height: 110px;
-    // } 
+    // 4th child of the div
+    div:nth-child(4) {
+        margin: 1.5rem;
+        margin-top: .2rem;
+        width: 120px;
+        height: 120px;
+    } 
+    div:nth-child(5) {
+        margin-bottom: .5rem;
+        width: 120px;
+        height: 120px;
+    } 
     // very large devices
     @media screen and (min-width: 2000px) {
         // 1st child of the div
@@ -160,15 +165,15 @@
             width: 200px;
             height: 200px;
         }
-        // // 4th child of the div
-        // div:nth-child(4) {
-        //     width: 170px;
-        //     height: 170px;
-        // } 
-        // div:nth-child(5) {
-        //     width: 250px;
-        //     height: 250px;
-        // } 
+        // 4th child of the div
+        div:nth-child(4) {
+            width: 170px;
+            height: 170px;
+        } 
+        div:nth-child(5) {
+            width: 250px;
+            height: 250px;
+        } 
     }
 
     @media screen and (max-width: 1200px) {
